--- a/divat.css
+++ b/divat.css
@@ -1,68 +1,67 @@
 h1{
     text-align: center;
+    size: 150;
+    color: mediumblue;
 }
 .igen{
     text-decoration: underline;
-    font-size: 40px;
-    font-family: 'Courier New';
+   
+    
 }
 
 p{
     text-align: center;
+    
  }
 
+
+body{
+    background-color: palegreen
+    
+}
 
 .td{
     text-decoration: underline;
     size: 600px;
-    color: #ff4800;
-    font-family: Arial;
+    color: #ff4800
 }
 
 .td1{
     text-decoration: underline;
     size: 600px;
-    color: #6dcfeb;
-    font-family: Arial;
+    color: #6dcfeb
 }
 
 .td2{
     text-decoration: underline;
     size: 600px;
-    color: #71797E;
-    font-family: Arial;
+    color: #71797E
 }
 
 .td3{
     text-decoration: underline;
     size: 600px;
-    color: #FFB3BE;
-    font-family: Arial;
+    color: #FFB3BE
 }
 
 .td4{
     text-decoration: underline;
     size: 600px;
-    color: #13500F;
-    font-family: Arial;
+    color: #0f460b
 }
 
 .td5{
     text-decoration: underline;
     size: 600px;
-    color: black;
-    font-family: Arial;
+    color: black
 }
 
+img{
+    width: 150px  ;
 
-.minta{
-    text-decoration: underline;
-    font-family: Arial; 
 }
 
-.img{
-    width: 50%;         
-    max-width: 400px;  
-    height: auto;
-    text-align: center;
+.félkövér{
+    font-family: Arial, Helvetica, sans-serif;
 }
+
